--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="This is description." />
 
-    <title>React App</title>
+    <link rel="shortcut icon" href="/googleFavicon.png" type="image/x-icon">
+    <title>Google</title>
 </head>
 
 <body>
